# rustdiag

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: CHANGELOG.md  DEVELOPMENT_PLAN.md  STRUCTURE.md
src/: main.rs
src/commands/: dns.rs  inspect.rs  mod.rs  outbound.rs  scan.rs  summary.rs  watch.rs
src/network/: dns.rs  dns.rs.bak  interfaces.rs  mod.rs  ports.rs  traffic.rs
src/util/: cli.rs  config.rs  display.rs  mod.rs
